v21.3.0
- Introduce a setting to toggle between monochrome and color channel logos (default: color)

v21.2.0
- Add setting to work around broken HLS streams provided by pluto.tv (requires inputstream.adaptive > 21.4.5)

v21.1.1
- Translations updates from Weblate
	- af_za, am_et, ar_sa, ast_es, az_az, be_by, bg_bg, bs_ba, ca_es, cs_cz, cy_gb, da_dk, de_de, el_gr, en_au, en_nz, en_us, eo, es_ar, es_es, es_mx, et_ee, eu_es, fa_af, fa_ir, fi_fi, fo_fo, fr_ca, fr_fr, gl_es, he_il, hi_in, hr_hr, hu_hu, hy_am, id_id, is_is, it_it, ja_jp, ko_kr, lt_lt, lv_lv, mi, mk_mk, ml_in, mn_mn, ms_my, mt_mt, my_mm, nb_no, nl_nl, pl_pl, pt_br, pt_pt, ro_ro, ru_ru, si_lk, sk_sk, sl_si, sq_al, sr_rs, sr_rs@latin, sv_se, szl, ta_in, te_in, tg_tj, th_th, tr_tr, uk_ua, uz_uz, vi_vn, zh_cn, zh_tw

v21.1.0
- Add setting for the first channel number used

v21.0.2
- Fix crash when no channels are returned from pluto API

v21.0.1
- TM free logo

v21.0.0
- Initial Omega version

v20.3.0
- Kodi inputstream API update to version 3.2.0
- Kodi PVR API update to version 8.0.2

v20.2.0
- Parse series title and episode name from epg

v20.1.0
- Kodi main API update to version 2.0.0

v20.0.3
- Fix creation of broadcast and channel uid

v20.0.2
- Fix memory leak when redirecting HTTP requests
- Load channel data on demand, not on add-on startup
- Do not report API call success when channels can't be loaded
- Fix crash on HTTP request error
- Code cleanup

v20.0.1
- Speedup and fix EPG data caching

v20.0.0
- Initial Nexus version

v0.0.4
- Fix no EPG data if Kodi setting 'past days to display' is greater than zero

v0.0.3
- Cleanup and prepare to move to kodi-pvr

v0.0.2
- Dynamic UUID for Device ID and SID

v0.0.1
- Initial alpha version