@@ -5,7 +5,6 @@
   name="Pluto.tv PVR Client"
   provider-name="Team Kodi, flubshi">
   <requires>@ADDON_DEPENDS@
-    <import addon="script.module.inputstreamhelper" version="0.4.1"/>
     <import addon="inputstream.adaptive" minversion="21.0.0"/>
   </requires>
   <extension
