@@ -1,41 +1,18 @@
 <?xml version="1.0" ?>
 <settings version="1">
   <section id="pvr.plutotv">
-    <category id="general" label="30001" help="">
+    <category id="playback" label="30001" help="">
       <group id="1" label="">
         <setting id="workaround_broken_streams" type="boolean" label="30009" help="-1">
           <level>2</level>
           <default>true</default>
           <control type="toggle"/>
         </setting>
-        <setting id="install_widevine" type="string" label="30007" help="">
-          <level>0</level>
-          <default />
-          <constraints>
-            <allowempty>true</allowempty>
-          </constraints>
-          <control type="button" format="action">
-            <data>RunScript(script.module.inputstreamhelper,widevine_install)
-            </data>
-          </control>
-          <dependency type="visible" operator="!is" setting="system.platform.android">true</dependency>
-        </setting>
-        <setting id="run_is_info" type="string" label="30006" help="">
-          <level>0</level>
-          <default />
-          <constraints>
-            <allowempty>true</allowempty>
-          </constraints>
-          <control type="button" format="action">
-            <data>RunScript(script.module.inputstreamhelper,info)</data>
-          </control>
-          <dependency type="visible" operator="!is" setting="system.platform.android">true</dependency>
-        </setting>
       </group>
     </category>
     <category id="channels" label="30002" help="">
       <group id="1" label="">
-        <setting id="start_channelnum" type="integer" label="30008" help="">
+        <setting id="start_channelnum" type="integer" label="30008" help="-1">
           <level>0</level>
           <default>1</default>
           <constraints>
@@ -52,7 +29,7 @@
     </category>
     <category id="debug" label="30040" help="">
       <group id="1" label="">
-        <setting id="internal_sid" type="string" label="30041" help="">
+        <setting id="internal_sid" type="string" label="30041" help="-1">
           <level>3</level>
           <default />
           <constraints>
@@ -60,7 +37,7 @@
           </constraints>
           <control type="edit" format="string"></control>
         </setting>
-        <setting id="internal_deviceid" type="string" label="30042" help="">
+        <setting id="internal_deviceid" type="string" label="30042" help="-1">
           <level>3</level>
           <default />
           <constraints>
